Fix old article warning on mobile
Some margins and padding were a bit too large as the content padding is
smaller on mobile.

Also fixes some whitespace as it was using spaces instead of our
standard tabs.

--- a/static/_/site.css
+++ b/static/_/site.css
@@ -231,32 +231,32 @@ table {
 }
 
 .articleOldWarning {
-  position: relative;
-  padding: 1rem 5rem 1rem 9rem;
-  margin-left: -2rem;
-  margin-right: -2rem;
-  background-color: whitesmoke;
-  border-bottom: 2px solid gainsboro;
-  font-size: 1.1rem;
-  line-height: 1.75em;
+	position: relative;
+	padding: 1rem 5rem 1rem 9rem;
+	margin-left: -2rem;
+	margin-right: -2rem;
+	background-color: whitesmoke;
+	border-bottom: 2px solid gainsboro;
+	font-size: 1.1rem;
+	line-height: 1.75em;
 }
-  .articleOldWarning::after {
-    content: "!";
-    position: absolute;
-    left: 2rem;
-    top: 50%;
-    transform: translateY(-50%);
-    display: block;
-    width: 5rem;
-    height: 5rem;
-    border-radius: 100%;
-    border: 3px solid orange;
-    color: orange;
-    font-size: 3rem;
-    font-weight: bold;
-    line-height: 5rem;
-    text-align: center;
-  }
+	.articleOldWarning::after {
+		content: "!";
+		position: absolute;
+		left: 2rem;
+		top: 50%;
+		transform: translateY(-50%);
+		display: block;
+		width: 5rem;
+		height: 5rem;
+		border-radius: 100%;
+		border: 3px solid orange;
+		color: orange;
+		font-size: 3rem;
+		font-weight: bold;
+		line-height: 5rem;
+		text-align: center;
+	}
 
 figure.pullRight {
 	float: right;
@@ -383,17 +383,18 @@ figure.polaroid img {
 	.singleArticle--header { padding-top: 0 }
 	.singleArticle--header h1 { font-size: 2rem; }
 
-  .articleOldWarning {
-    margin-bottom: 2rem;
-    padding: 1rem 1rem 1rem 6rem;
-    font-size: 1rem;
-  }
-    .articleOldWarning::after {
-      width: 2rem;
-      height: 2rem;
-      line-height: 2rem;
-      font-size: 1.5rem;
-    }
+	.articleOldWarning {
+		margin: 0 -1rem 2rem -1rem;
+		padding: 1rem 1rem 1rem 4rem;
+		font-size: 1rem;
+	}
+		.articleOldWarning::after {
+			left: 1rem;
+			width: 2rem;
+			height: 2rem;
+			line-height: 2rem;
+			font-size: 1.5rem;
+		}
 
 	.homeColumns { display: block; margin: 0 -1rem; }
 	.homeColumns--column { width: auto; }
